[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
authors = ["phial3"]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
mysql_common = "0.28.2"
chrono = "0.4.19"
async-log = "2.0.0"
femme = "1.3.0"
log = "0.4.17"
bitflags = "1.3.2"
byteorder = "1.4.3"
rand = "0.8.5"
lazy_static = "1.4.0"
sha1 = "0.6.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "0.8.24"
toml = "0.5.6"
dashmap = "3.5.1"
sqlparser = "0.17.0"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
regex = "1.5"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
