[package]
name = "advanced"
version = "0.1.0"
edition = "2021"
authors = ["phial3"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
mysql_common = "0.29"
chrono = "0.4"
async-log = "2.0"
femme = "1.3.0"
log = "0.4"
bitflags = "1.3"
byteorder = "1.4"
rand = "0.8"
lazy_static = "1.4"
sha1 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.5"
dashmap = "5.4"
sqlparser = "0.27"
clap = { version = "3.2", features = ["derive", "cargo"] }
regex = "1.5"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
