[workspace]
members = [
    "chat",
    "clap",
    "compiler-calcium",
    "compiler-chigusa",
    "compiler-cmm",
    "compiler-labs",
    "compilers-stanford",
    "complex-num",
    "concurrency_demo",
    "features_exam",
    "hello_rpc",
    "helloworld-tonic",
    "my-redis",
    "practice",
    "rust_grpc_demo",
    "sql_parser",
    "structopt",
    "thread_local",
    "tokio_read_file"
]

