[workspace]
members = [
    "chat",
    "clap",
    "compiler-calcium",
    "compiler-chigusa",
    "compiler-cmm",
    "compiler-labs",
    "compilers-stanford",
    "complex-num",
    "concurrency_demo",
    "features_exam",
    "hello_rpc",
    "hello-tonic",
    "hello-hyper",
    "hello-tokio",
    "hello-proto",
    "hello-ntex",
    "my-redis",
    "practice",
    "grpc_demo",
    "sql_parser",
    "structopt",
    "thread_local",
]

