[workspace]
members = [
    "chat",
    "clap",
#    "compiler-calcium",
#    "compiler-chigusa",
#    "compiler-cmm",
#    "compiler-labs",
#    "compilers-stanford",
#    "complex-num",
    "concurrency_demo",
    "features_exam",
    "hello-grpc",
    "hello-tonic",
    "hello-hyper",
    "hello-tokio",
    "hello-ntex",
    "hello-axum",
    "practice",
    "hello-grpc-tonic-build",
    "sql_parser",
    "structopt",
    "thread_local",
]

