[package]
name = "hello-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = [
    "./src/**",
    "./protos/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
protobuf = "3"
tonic = "0.8.2"
serde = {version = "1.0.84", features = ["derive"]}
serde_json = "1.0.78"
tokio = { version = "1.20.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
protobuf = "3"
protobuf-codegen = "3"
protoc-bin-vendored = "3"


