[package]
name = "hello-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = [
    "./src/**",
    "./proto/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20",  features = ["full"] }

[build-dependencies]
tonic-build = "0.8"

