[package]
name = "hello_rpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="0.8.3"
grpc-protobuf="0.8.3"
protobuf = "2"
tonic = "0.7.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
prost = "0.10.*"

[build-dependencies]
protoc-rust-grpc = "0.8.3"


