[package]
name = "bar"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
foo = { path = "../foo", features = ["serde"] }
